# E-Store

./: .gitignore
backend/: cehck.py
backend/store/: pyproject.toml  requirements.txt
backend/store/app/: admin.py  cehck.py  models.py  serializer.py  views.py
backend/store/app/migrations/: 0001_initial.py  0002_add_product_product_brand_add_product_product_colour.py  0003_cart.py  0004_user.py  0005_add_product_user.py
backend/store/store/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/Components/: Footer.tsx  Loader.tsx  NavBar.tsx  Noproduct.tsx
frontend/app/LOGIN/: layout.tsx
frontend/app/LOGIN/Login/: page.tsx
frontend/app/LOGIN/Register/: page.tsx
frontend/app/Pages/: layout.tsx
frontend/app/Pages/Add_Product/: page.tsx
frontend/app/Pages/Cart/: page.tsx
frontend/app/Product/: layout.tsx
frontend/app/Product/[id]/: NoProduct.tsx  page.tsx  product_client.tsx
frontend/app/api/imagekit-auth/: route.ts
frontend/app/lib/: product.ts
frontend/app/product/[id]/: page.tsx  product_client.tsx
frontend/utils/: middleware.ts
frontend/utils/supabase/: client.ts  server.ts
